9/20/11 #3077, move padPreferredWidthDeep to SwingUtils
9/20/11 workaround for #3077 (PSwing clips labels in floating control panels)
9/20/11 vertically center 2D molecules between plates
9/20/11 restore Bond Type feature
# 0.00.24 (56733) Sep 20, 2011
9/20/11 temporarily hide Bond Type feature, for interviews
# 0.00.23 (56723) Sep 19, 2011
9/19/11 move Jmol console to Developer menu
9/19/11 first pass at a reusable Jmol console component
9/19/11 move duplicate observer code into Molecule2D base class
9/19/11 move duplicate ClockListener into MPModel2D base class
9/19/11 fix 2D model class hierarchy
9/19/11 javadoc
9/19/11 write development-notes.xt
9/19/11 rename RotateMol2
9/19/11 add rotate cursor to 2D surfaces
9/19/11 generalize algorithm for computing molecular dipole, move to base class
9/19/11 move 2D molecular dipole to base class
9/19/11 first pass at a base class for 2D molecules
9/19/11 fix incorrect usages of "isosurface" terminology
9/19/11 create a base class for 2D surface nodes
9/19/11 delete unneeded keep statements from molecule-polarity.pro (for file format readers that we're not using)
9/19/11 delete unused TestMepCalculation
9/19/11 make MoleculeRotationHandler extend PDragSequenceEventHandler
9/19/11 change request: make CHF3 have same initial orientation as CHCl3
9/19/11 rename BondAngleDragIndicatorNode to BondAngleArrowsNode
9/19/11 override correct drag methods in BondAngleHandler
9/19/11 merge BondAngleVisibilityHandler into BondAngleHandler
9/19/11 change behavior of bond angle arrows (visible on mouse enter, disappear on mouse exit or when drag starts)
# 0.00.22 (56575) Sep 14, 2011
9/14/11 put red outline around stage bounds only for dev versions
9/14/11 add additional horizontal space between Jmol viewer and control panel
9/14/11 revert to original EN values for atoms in diatomic molecule
9/14/11 change initial orientation of CHCl3 (multi-step rotation: x=-90 -> y=+10 -> x=+25), relabel atoms