@@ -30,5 +30,4 @@ MIGRATE TO COMMON
 - HorizontalSliderDragHandler
 - VerticalSliderDragHandler (from capacitor-lab, needs generalization?)
 - RotateCursorHandler and associated image
-- Molecule3D.toSubscript
 - JmolConsole
