@@ -1,5 +1,5 @@
 # build properties for molecule-polarity
 project.depends.data=data
 project.depends.source=src
-project.depends.lib=phetcommon piccolo-phet jmol
+project.depends.lib=phetcommon piccolo-phet chemistry jmol
 project.flavor.molecule-polarity.mainclass=edu.colorado.phet.moleculepolarity.MoleculePolarityApplication
