@@ -9,6 +9,7 @@ import java.io.InputStreamReader;
 
 import javax.swing.JFileChooser;
 
+import edu.colorado.phet.chemistry.utils.ChemUtils;
 import edu.colorado.phet.common.phetcommon.application.PhetApplication;
 import edu.colorado.phet.common.phetcommon.resources.PhetResources;
 import edu.colorado.phet.moleculepolarity.MPConstants;
@@ -31,7 +32,7 @@ public class Molecule3D {
      * @param resourceFilename the data file that will be provided to Jmol
      */
     public Molecule3D( String symbol, String name, String resourceFilename ) {
-        this.symbol = toSubscript( symbol );
+        this.symbol = ChemUtils.toSubscript( symbol );
         this.name = name;
         this.resourceFilename = resourceFilename;
     }
@@ -67,37 +68,6 @@ public class Molecule3D {
             line = structureReader.readLine();
         }
         return s;
-    }
-
-    //TODO consider generalizing and migrating to phetcommon, this has been copied in a several sims
-    /*
-     * Handles HTML subscript formatting.
-     * All numbers in a string are assumed to be part of a subscript, and will be enclosed in a <sub> tag.
-     * For example, "C2H4" is converted to "C<sub>2</sub>H<sub>4</sub>".
-     */
-    private static final String toSubscript( String inString ) {
-        String outString = "";
-        boolean sub = false; // are we in a <sub> tag?
-        for ( int i = 0; i < inString.length(); i++ ) {
-            final char c = inString.charAt( i );
-            if ( !sub && Character.isDigit( c ) ) {
-                // start the subscript tag when a digit is found
-                outString += "<sub>";
-                sub = true;
-            }
-            else if ( sub && !Character.isDigit( c ) ) {
-                // end the subscript tag when a non-digit is found
-                outString += "</sub>";
-                sub = false;
-            }
-            outString += c;
-        }
-        // end the subscript tag if the string ends with a digit
-        if ( sub ) {
-            outString += "</sub>";
-            sub = false;
-        }
-        return outString;
     }
 
     /*
