@@ -1,3 +1,4 @@
+9/20/11 add dependency on chemistry common project, to use ChemUtils.toSubscript
 9/20/11 #3077, move padPreferredWidthDeep to SwingUtils
 9/20/11 workaround for #3077 (PSwing clips labels in floating control panels)
 9/20/11 vertically center 2D molecules between plates
